- Deprecate IGNORE_URLS, replace with TRANSACTION_IGNORE_URLS {pull}811[(#811)]
- Tracer.Close now waits for the transport goroutine to end before returning {pull}816[#(816)]
- Relax Kubernetes pod UID discovery rules {pull}819[#(819)]
- Add transaction and span outcome {pull}820[#(820)]
- Add cloud metadata, configurable with ELASTIC_APM_CLOUD_PROVIDER {pull}823[#(823)]
- module/apmhttp: implement io.ReaderFrom in wrapped http.ResponseWriter {pull}830[#(830)]

[[release-notes-1.x]]
=== Go Agent version 1.x

[[release-notes-1.8.0]]
==== 1.8.0 - 2020/05/06

- Add "recording" config option, to dynamically disable event recording {pull}737[(#737)]
- Enable central configuration of "stack_frames_min_duration" and "stack_trace_limit" {pull}742[(#742)]
- Implement "CloseIdleConnections" on the Elasticsearch RoundTripper {pull}750[(#750)]
- Fix apmot nil pointer dereference in Tracer.Inject {pull}763[(#763)]

[[release-notes-1.7.2]]
==== 1.7.2 - 2020/03/19

- Update cucumber/godog to 0.8.1 {pull}733[(#733)]

[[release-notes-1.7.1]]
==== 1.7.1 - 2020/03/05

https://github.com/elastic/apm-agent-go/releases/tag/v1.7.1[View release]

- Fix segfault on 32-bit architectures {pull}728[(#728)]

[[release-notes-1.7.0]]
==== 1.7.0 - 2020/01/10

https://github.com/elastic/apm-agent-go/releases/tag/v1.7.0[View release]

 - Add span.context.destination.* {pull}664[(#664)]
 - transport: fix Content-Type for pprof data {pull}679[(#679)]
 - Add "tracestate" propagation {pull}690[(#690)]
 - Add support for API Key auth {pull}698[(#698)]
 - module/apmsql: report rows affected {pull}700[(#700)]

[[release-notes-1.6.0]]
==== 1.6.0 - 2019/11/17

https://github.com/elastic/apm-agent-go/releases/tag/v1.6.0[View release]

 - module/apmhttp: add WithClientRequestName option {pull}609[(#609)]
 - module/apmhttp: add WithPanicPropagation function {pull}611[(#611)]
 - module/apmgoredis: add Client.RedisClient {pull}613[(#613)]